# AdventOfCode

./: download.py  program.py  program2022.py  program2023.py  pyproject.toml  requirements.txt
src/aoc2022/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  notebook.ipynb
src/aoc2023/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py
src/aoc2024/: __init__.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py
src/common/: characters.py  dataload.py  equations.py  extensions.py  grid.py  parsing.py
src/tests/: test_common.py  test_day02.py
src/tests/2022/: test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py
src/tests/tests2022/: test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py  test_day09.py  test_day10.py  test_day11.py  test_day12.py  test_day13.py  test_day14.py
src/tests/tests2023/: test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py  test_day09.py
src/tests/tests2024/: test_day03.py  test_day04.py  test_day05.py
