[project]
name = "advent-of-code"
version = "0.4.0"
description = "Advent of Code"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["mypy", "pytest", "ruff", "pipe", "requests"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
strict_equality = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["src.common.*", "src.aoc2022.*", "src.aoc2023.*"]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "parse"
ignore_missing_imports = true

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I"]